--- a/style.css
+++ b/style.css
@@ -27,9 +27,6 @@ h3{
     color: #11999E;
 }
 
-.middle-container {
-
-}
 .bottom-container{
     height: 60px;
     background-color: #548CA8;
@@ -68,10 +65,6 @@ a:hover{
     color: #1B2430;
 }
 
-.cool-gip{
-    width: 100%;
-    height: 100%;
-}
 
 .panda-img{
     width: 150px;
@@ -93,7 +86,7 @@ a:hover{
 
 .profile{
     width: 50%;
-    margin: 100px auto 100px auto;
+    margin: 12% auto 20% auto;
     #text-align: left;
     line-height: 2;
 }
